[package]
name = "polyfs"
version = "0.1.0"
authors = ["Katharos Technology <katharostech.com>"]
edition = "2018"

[dependencies]
# Logging
log = "0.4.6"
env_logger = "0.6.1"

# Commandline Parsing
clap = { version = "2.33.0", features = ["wrap_help"] }

# Serialization
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
serde_yaml = "0.8.8"

# Temporary
yaml-rust = "0.4.3" # TODO: To be replaced by Serde
linked-hash-map = "0.5.2"
