[package]
name = "polyfs"
version = "0.1.0"
authors = ["Katharos Technology <katharostech.com>"]
edition = "2018"

[dependencies]
# Logging
    # Logging interface
    log = "0.4.6"
    # Used for timestamps
    chrono = "0.4.6"
    # Used for syslog integration
    syslog = "4.0.1"
    # Logging framework
    fern = { version = "0.5.8", features = ["colored", "syslog-4"] }

# FUSE Filesystem
    fuse = "0.3.1"
    libc = "0.2.54"
    time = "0.1.42"
    rand = "0.6.5"

# Commandline Parsing
    # Framework
    clap = { version = "2.33.0", features = ["wrap_help"] }

# Serialization
    # Framework
    serde = { version = "1.0.90", features = ["derive"] }

    # Formats
    bincode = "1.1.3"
    serde_json = "1.0.39"
    serde_yaml = "0.8.8"

# Backends
    # Dual
    diesel = { version = "1.4.2", features = ["sqlite"] }
    diesel_migrations = "1.4.0"
